2003-09-30  Matthias Clasen  <maclas@gmx.de>

	* tests/merge-*.ui: 
	* tests/testmerge.c: Test handling of empty menus.

	* gtk/gtkuimanager.c (_gtk_menu_is_empty): New function to determine
	whether a menu is empty. Used in gtkaction.c.
	(update_smart_separators): Also update the visibility of empty menus.
	(update_node): When creating a new menu proxy, insert an "Empty" menu 
	item which only gets shown if the menu is empty. 

	* gtk/gtkaction.c (gtk_action_class_init): Document the meaning of
	"is_important" for menu proxies.
	(_gtk_action_sync_menu_visible): New function to sync the visibility
	of menu proxies. Used in gtkuimanager.c.
	(gtk_action_sync_visible): New function to sync the visibility of 
	proxies.

Tue Sep 30 21:43:34 2003  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtkcombobox.c (gtk_combo_box_menu_button_press): set
	popup_in_progress to TRUE,
	(gtk_combo_box_menu_show): and back to FALSE here; the menu now
	won't disappear on the first button release. (Reported by Matthias
	Clasen).

Tue Sep 30 21:08:43 2003  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtkcombobox.c (gtk_combo_box_init): actually show the child.

	* gtk/gtkcomboboxentry.c (gtk_combo_box_entry_init): ditto. (#123543,
	Marco Pesenti Gritti).

2003-09-30  Murray Cumming  <murrayc@usa.net>
 
 	* gtk/gtkcellrenderer.h: The render vfunc takes a GdkDrawable*
 	instead of a GdkWindow*, because that what it is given. The 
 	documentation was already correct. This should cause no API/ABI
 	breakage with C compilers.
 	* gtk/gtkcellrenderertext.c, gtkcellrendererpixbuf.c, 
 	gtkcellrenderertogger.c: Updated the declarations of the render vfunc
 	implementation accordingly.

2003-09-30  Matthias Clasen  <maclas@gmx.de>

	* gdk/gdkkeys.c (gdk_keymap_class_init): Document the
	"direction-changed" and "keys-changed" signals.

	* gdk/gdkscreen.c (gdk_screen_class_init): Document the 
	"size-changed" signal.

	* gdk/gdkdisplaymanager.c (gdk_display_manager_class_init): 